5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1664_1399.log
== TEST (2019-04-16 10:13:36) 
-- CODE:
a = int(input("Digite a quantidae de votos para Ambrosio: "))
d = int(input("Digite a quantidade de votos para Demelza: "))
a + d = 1

if (a > d):
	print("Ambrosio Rutra")
	x = (1 - d)* 100
	print(x)
	
-- ERROR:
File "XXXX", line 3
    a + d = 1
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:13:45) 
-- CODE:
a = int(input("Digite a quantidae de votos para Ambrosio: "))
d = int(input("Digite a quantidade de votos para Demelza: "))
a + d = 100

if (a > d):
	print("Ambrosio Rutra")
	x = (1 - d)* 100
	print(x)
	
-- ERROR:
File "XXXX", line 3
    a + d = 100
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:14:20) 
-- CODE:
a = int(input("Digite a quantidae de votos para Ambrosio: "))
d = int(input("Digite a quantidade de votos para Demelza: "))
a + d = 1

if (a > d):
	
	print("Ambrosio Rutra")
	x = (1 - d)* 100
	print(x)
	
-- ERROR:
File "XXXX", line 3
    a + d = 1
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:18:01) 
-- CODE:
a = int(input("Digite a quantidae de votos para Ambrosio: "))
d = int(input("Digite a quantidade de votos para Demelza: "))
a + d = 1

if (a > d):
	
	print("Ambrosio Rutra")
	x = (1 - d)* 100
	print(x)
	
-- ERROR:
File "XXXX", line 3
    a + d = 1
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:18:08) 
-- CODE:
a = int(input("Digite a quantidae de votos para Ambrosio: "))
d = int(input("Digite a quantidade de votos para Demelza: "))

if (a > d):
	
	print("Ambrosio Rutra")
	x = (1 - d)* 100
	print(x)
	
-- OUTPUT:
Ambrosio Rutra
-2584999900
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:18:14) 
-- CODE:
a = int(input("Digite a quantidade de votos para Ambrosio: "))
d = int(input("Digite a quantidade de votos para Demelza: "))

if (a > d):
	
	print("Ambrosio Rutra")
	x = (1 - d)* 100
	print(x)
	
-- OUTPUT:
Ambrosio Rutra
-2584999900
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:19:18) 
-- CODE:
a = int(input("Digite a quantidade de votos para Ambrosio: "))
d = int(input("Digite a quantidade de votos para Demelza: "))

if (a > d):
	
	print("Ambrosio Rutra")
	x = (a - (d/100))
	print(x)
	
-- OUTPUT:
Ambrosio Rutra
54281500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:30:04) 
-- CODE:
a = int(input("Digite a quantidade de votos para Ambrosio: "))
d = int(input("Digite a quantidade de votos para Demelza: "))
x = a + d
y = x
y = 1

if (a > d):
	print("Ambrosio Rutra")
	r = a / 100
	print(r)
else: 
	print("Demelza Olecram")
	r = d / 100
	print(r)
-- OUTPUT:
Ambrosio Rutra
545400.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:31:27) 
-- CODE:
a = int(input("Digite a quantidade de votos para Ambrosio: "))
d = int(input("Digite a quantidade de votos para Demelza: "))
x = a + d
y = x
y = 100

if (a > d):
	print("Ambrosio Rutra")
	r = a / 100
	print(r)
else: 
	print("Demelza Olecram")
	r = d / 100
	print(r)
-- OUTPUT:
Ambrosio Rutra
545400.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:31:52) 
-- CODE:
a = int(input("Digite a quantidade de votos para Ambrosio: "))
d = int(input("Digite a quantidade de votos para Demelza: "))
x = a + d
y = x
y = 100

if (a > d):
	print("Ambrosio Rutra")
	r = x - (a / 100)
	print(r)
else: 
	print("Demelza Olecram")
	r = d / 100
	print(r)
-- OUTPUT:
Ambrosio Rutra
79844600.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:32:10) 
-- CODE:
a = int(input("Digite a quantidade de votos para Ambrosio: "))
d = int(input("Digite a quantidade de votos para Demelza: "))
x = a + d
y = x
y = 100

if (a > d):
	print("Ambrosio Rutra")
	r = x*100 - (a / 100)
	print(r)
else: 
	print("Demelza Olecram")
	r = d / 100
	print(r)
-- OUTPUT:
Ambrosio Rutra
8038454600.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:33:15) 
-- CODE:
a = int(input("Digite a quantidade de votos para Ambrosio: "))
d = int(input("Digite a quantidade de votos para Demelza: "))
x = a + d

if (a > d):
	print("Ambrosio Rutra")
	r = a / x
	print(r)
else: 
	print("Demelza Olecram")
	r = d / 100
	print(r)
-- OUTPUT:
Ambrosio Rutra
0.6784425923622341
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:33:34) 
-- CODE:
a = int(input("Digite a quantidade de votos para Ambrosio: "))
d = int(input("Digite a quantidade de votos para Demelza: "))
x = a + d

if (a > d):
	print("Ambrosio Rutra")
	r = a / x
	print(r)
else: 
	print("Demelza Olecram")
	r = d / x
	print(r)
-- OUTPUT:
Ambrosio Rutra
0.6784425923622341
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:34:02) 
-- CODE:
a = int(input("Digite a quantidade de votos para Ambrosio: "))
d = int(input("Digite a quantidade de votos para Demelza: "))
x = a + d

if (a > d):
	print("Ambrosio Rutra")
	r = (a / x) * 100
	print(r)
else: 
	print("Demelza Olecram")
	r = (d / x) * 100
	print(r)
-- OUTPUT:
Ambrosio Rutra
67.84425923622341
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:34:42) 
-- CODE:
a = int(input("Digite a quantidade de votos para Ambrosio: "))
d = int(input("Digite a quantidade de votos para Demelza: "))
x = a + d

if (a > d):
	print("Ambrosio Rutra")
	r = (a / x) * 100
	print(round(r,2))
else: 
	print("Demelza Olecram")
	r = (d / x) * 100
	print(round(r,2))
-- OUTPUT:
Ambrosio Rutra
67.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:34:54) 
-- CODE:
a = int(input("Digite a quantidade de votos para Ambrosio: "))
d = int(input("Digite a quantidade de votos para Demelza: "))
x = a + d

if (a > d):
	print("Ambrosio Rutra")
	r = (a / x) * 100
	print(round(r,2))
else: 
	print("Demelza Olecram")
	r = (d / x) * 100
	print(round(r,2))
-- OUTPUT:
Ambrosio Rutra
67.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:35:08) 
-- CODE:
a = int(input("Digite a quantidade de votos para Ambrosio: "))
d = int(input("Digite a quantidade de votos para Demelza: "))
x = a + d

if (a > d):
	print("Ambrosio Rutra")
	r = (a / x) * 100
	print(round(r,2))
else: 
	print("Demelza Olecram")
	r = (d / x) * 100
	print(round(r,2))
-- OUTPUT:
Ambrosio Rutra
67.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:35:23) 
-- CODE:
a = int(input("Digite a quantidade de votos para Ambrosio: "))
d = int(input("Digite a quantidade de votos para Demelza: "))
x = a + d

if (a > d):
	print("Ambrosio Rutra")
	r = (a / x) * 100
	print(round(r,2))
else: 
	print("Demelza Olecram")
	r = (d / x) * 100
	print(round(r,2))
-- EXECUTION TIME:
0.15575
-- TEST CASE 1:
---- input:
54540000
25850000
---- correct output:
Ambrosio Rutra
67.84
---- user output:
Ambrosio Rutra
67.84
-- TEST CASE 2:
---- input:
1254545
22225469
---- correct output:
Demelza Olecram
94.66
---- user output:
Demelza Olecram
94.66
-- TEST CASE 3:
---- input:
5000
8000

---- correct output:
Demelza Olecram
61.54
---- user output:
Demelza Olecram
61.54
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
